[gd_scene load_steps=4 format=3 uid="uid://cfjto2dup3wv4"]

[ext_resource type="Script" path="res://Utilidades/pantalla_mejoras.gd" id="1_ag57l"]
[ext_resource type="FontFile" uid="uid://t2p7r82007sp" path="res://Font/m6x11.ttf" id="2_3fxt2"]
[ext_resource type="Script" path="res://Utilidades/basic_button.gd" id="3_vq3m5"]

[node name="pantalla_mejoras" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -180.0
offset_right = 320.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ag57l")

[node name="Fondo" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -143.0
offset_right = 704.0
offset_bottom = 373.0
color = Color(0.565333, 0.215866, 0.253388, 1)

[node name="Titulo" type="Label" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 1.0
offset_right = 641.0
offset_bottom = 100.0
theme_override_fonts/font = ExtResource("2_3fxt2")
theme_override_font_sizes/font_size = 50
text = "Compras
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 19.0
offset_top = -269.0
offset_right = 95.0
offset_bottom = -157.0
grow_vertical = 0

[node name="VelocidadContainer" type="Label" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
text = "Velocidad"

[node name="Label" type="Label" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
text = "250$"
horizontal_alignment = 1

[node name="MejorarButton" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
text = "Mejorar"
script = ExtResource("3_vq3m5")

[node name="LabelVelocidad" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 162.0
offset_top = 95.0
offset_right = 262.0
offset_bottom = 180.0

[node name="SaludContainer" type="Label" parent="VBoxContainer2"]
layout_mode = 2
text = "Vida Maxima"

[node name="Label" type="Label" parent="VBoxContainer2"]
texture_filter = 1
layout_mode = 2
text = "250$"
horizontal_alignment = 1

[node name="MejorarButton" type="Button" parent="VBoxContainer2"]
texture_filter = 1
layout_mode = 2
text = "Mejorar"
script = ExtResource("3_vq3m5")

[node name="LabelSalud" type="Label" parent="VBoxContainer2"]
layout_mode = 2

[node name="VBoxContainerRegen" type="VBoxContainer" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 326.0
offset_top = 98.0
offset_right = 426.0
offset_bottom = 183.0

[node name="RegenContainer" type="Label" parent="VBoxContainerRegen"]
layout_mode = 2
text = "Regeneraci√≥n"

[node name="Label" type="Label" parent="VBoxContainerRegen"]
texture_filter = 1
layout_mode = 2
text = "250$"
horizontal_alignment = 1

[node name="MejorarButton" type="Button" parent="VBoxContainerRegen"]
texture_filter = 1
layout_mode = 2
text = "Mejorar"
script = ExtResource("3_vq3m5")

[node name="LabelRegen" type="Label" parent="VBoxContainerRegen"]
layout_mode = 2

[node name="VBoxContainerArmor" type="VBoxContainer" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 490.0
offset_top = 100.0
offset_right = 590.0
offset_bottom = 185.0

[node name="ArmorContainer" type="Label" parent="VBoxContainerArmor"]
layout_mode = 2
text = "Armadura"

[node name="Label" type="Label" parent="VBoxContainerArmor"]
texture_filter = 1
layout_mode = 2
text = "250$"
horizontal_alignment = 1

[node name="MejorarButton" type="Button" parent="VBoxContainerArmor"]
texture_filter = 1
layout_mode = 2
text = "Mejorar"
script = ExtResource("3_vq3m5")

[node name="LabelArmor" type="Label" parent="VBoxContainerArmor"]
layout_mode = 2

[node name="VBoxContainerScroll" type="VBoxContainer" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 9.0
offset_top = 228.0
offset_right = 147.0
offset_bottom = 340.0

[node name="ScrollContainer" type="Label" parent="VBoxContainerScroll"]
layout_mode = 2
text = "Reducir cooldown"

[node name="Label" type="Label" parent="VBoxContainerScroll"]
texture_filter = 1
layout_mode = 2
text = "250$"
horizontal_alignment = 1

[node name="MejorarButton" type="Button" parent="VBoxContainerScroll"]
texture_filter = 1
layout_mode = 2
text = "Mejorar"
script = ExtResource("3_vq3m5")

[node name="LabelScroll" type="Label" parent="VBoxContainerScroll"]
layout_mode = 2

[node name="VBoxContainerRing" type="VBoxContainer" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 200.0
offset_top = 223.0
offset_right = 301.0
offset_bottom = 335.0

[node name="RingContainer" type="Label" parent="VBoxContainerRing"]
layout_mode = 2
text = "Atq adicional"

[node name="Label" type="Label" parent="VBoxContainerRing"]
texture_filter = 1
layout_mode = 2
text = "250$"
horizontal_alignment = 1

[node name="MejorarButton" type="Button" parent="VBoxContainerRing"]
texture_filter = 1
layout_mode = 2
text = "Mejorar"
script = ExtResource("3_vq3m5")

[node name="LabelRing" type="Label" parent="VBoxContainerRing"]
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 20.0
offset_right = 66.0
offset_bottom = 60.0

[node name="OroLabel" type="Label" parent="VBoxContainer3"]
layout_mode = 2

[node name="VBoxContainer4" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 474.0
offset_top = 321.0
offset_right = 621.0
offset_bottom = 352.0

[node name="ComenzarButton" type="Button" parent="VBoxContainer4"]
texture_filter = 1
layout_mode = 2
text = "Comenzar Partida"
script = ExtResource("3_vq3m5")

[node name="Button" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 504.0
offset_top = 33.0
offset_right = 599.0
offset_bottom = 64.0
text = "oroorororo"
script = ExtResource("3_vq3m5")

[connection signal="pressed" from="VBoxContainer/MejorarButton" to="." method="_on_Velocidad_MejorarButton_pressed"]
[connection signal="pressed" from="VBoxContainer2/MejorarButton" to="." method="_on_SaludMaxima_MejorarButton_pressed"]
[connection signal="pressed" from="VBoxContainerRegen/MejorarButton" to="." method="_on_Regeneracion_MejorarButton_pressed"]
[connection signal="pressed" from="VBoxContainerArmor/MejorarButton" to="." method="_on_Armadura_MejorarButton_pressed"]
[connection signal="pressed" from="VBoxContainerScroll/MejorarButton" to="." method="_on_Scroll_MejorarButton_pressed"]
[connection signal="pressed" from="VBoxContainerRing/MejorarButton" to="." method="_on_Ring_MejorarButton_pressed"]
[connection signal="pressed" from="VBoxContainer4/ComenzarButton" to="." method="_on_ComenzarButton_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_TestButton_pressed"]
